<resources>
    <string name="app_name">GestureDetect</string>
    <string name="rec_on">START</string>
    <string name="rec_off">STOP</string>
    <string name="no_permissions">No \"Write external permissions\"</string>
    <string name="sensor_failed">Sensor listener registration failed</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="file_name">File name</string>
    <string name="data_saved">Data saved successfully</string>
    <string name="failed_to_save">Failed to save data</string>
    <string name="failed_to_save_error">Failed to save data. Error:</string>
    <string name="failed_to_load">Failed to load data</string>
    <string name="failed_to_load_error">Failed to load data. Error:</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="save_as">Save as</string>
    <string name="dir">Choosing dir</string>
    <string name="test">Test</string>
    <string name="time">Time :</string>
</resources>
